# multitasking-scheduling-algorithm-simulation-system

./: .gitignore  CMakeLists.txt  README.md  install_raylib.sh  main  makefile  script.sh
src/: build.sh  config.conf  main.c  main2  main2.c  processes.txt
src/includes/data_structures/: priority_queue.h  process.h  queue.h
src/includes/utils/: ProcessesTable.h  ReadyQueueElements.h  algo_result.h  algorithms_utils.h  dynamic_menu.h  instant_result_node.h  logs.h  metrics.h  process.h  processes_generator.h  test.txt
src/scheduling_algorithms/: FIFO.c  RoundRobin.c  SRT.c  SRTalgo.c  multilevel.c  multilevel_v2.c  nonpreemptive_priority.c  preemptive_priority.c  round_robin.c  sjf.c  static_priority.c
